--- a/src/app/form-inputs-create/form-inputs-create.component.html
+++ b/src/app/form-inputs-create/form-inputs-create.component.html
@@ -1,38 +1,47 @@
-
-<div class="row">
-    <div class="col-xs-1">{{formName}}</div>
-    <div class="col-xs-6">
+<div class="pl-3">
+<h4>WorkSpace : {{formName}}</h4>
+</div>
+<div class="row container">
+    <div class="col-lg-6 border-right  h-60">
         <form #formCreate="ngForm">
-            <div *ngIf="showQuestionInputForm">
-                <div name="phoneNumber">
+            <div *ngIf="showQuestionInputForm && questionModels.length>0">
+                <div name="phoneNumber" *ngFor="let questionModel of questionModels">
                 <button class="default-btn">g1</button>
-            
-                
-                <input [(ngModel)]="questionModel" #questionInput="ngModel" type="text" placeholder="Type question here..."/>
+                <input [(ngModel)]="questionModel" name="question"  type="text" placeholder="Type question here..."/>
                     
-                <pre>{{ questionInput | json }}</pre>
+                <pre></pre>
                 
                 <BR><BR>
                 - <input type="text" name="choice"/>        
                 </div>
             </div>
             <BR>
-            <button class="default-btn" (click)="getQuestionTypes()">+</button><label>Add your first question</label>
-            <BR><BR>
-            
+              
+                
+                <div class="dropdown show">
+                    <a class="btn  dropdown-toggle" (click)="getQuestionTypes($event)" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        <mat-icon>control_point</mat-icon>
+                    </a>
+                    <label>Add your first question</label>
+                    <div class="dropdown-menu show" *ngIf="showQuestionTypes" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item">Choose a question type</a>  
+                      <a class="dropdown-item" (click)="selectQuestion(questionType.questionTypeKey)" *ngFor="let questionType of questionTypes">{{questionType.questionTypeName}}</a>
+                    </div>
+                  </div>
+                  
+
+    <!-- 
             <select [(ngModel)]="questionTypeModel" name="questionType" *ngIf="showQuestionTypes" (ngModelChange)="showQuestionInput($event)">
                 <option value="">Choose a question type</option>
                 <option *ngFor="let questionType of questionTypes" [value]="questionType.questionTypeKey">{{questionType.questionTypeName}}</option>
-                
-                <!--<option>Multiple Choice</option>
-                <option>Phone Number</option>
-                <option>Short Text</option>
-                <option>Long Text</option>
-                <option>Statement</option>-->
-            </select>
+            </select> -->
             </form>
     </div>
-    <div class="col-xs-5"></div>
+    <div class="col-lg-5">
+        <div>
+            kkkkk
+        </div>
+    </div>
 </div>
 <!-- <div style="display: flex; padding-top: 35px;padding-left: 150px;">      
 <div style="width: 500px;"> 
